# Clear-all-wallpaper-engine

./: .gitignore  README.md  build.bat  build.ps1  dev.bat  ex.py  init.bat  merge-to-main.bat  update.bat
src/: i18n.js  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_ops.rs  lib.rs  main.rs  project.rs  scanner.rs  steam.rs
